Followed SOLID principles in this design. Allows user to add/edit customer. and edit staff Created Controllers for Customer and Staff Created Models for Customer and CustomerView Created Models for Staff and StaffView Created Views

--- a/MVCCIMotorsForms/Views/Shared/_Layout.cshtml
+++ b/MVCCIMotorsForms/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Staff Management", "StaffManagement", "Home")</li>
-                    @*<li>@Html.ActionLink("Customer Management", "CustomerManagement", "Home")</li>*@
+                    <li>@Html.ActionLink("Staff Management", "Index", "Staff")</li>
+                    <li>@Html.ActionLink("Customer Management", "Index", "Customer")</li>
                 </ul>
             </div>
         </div>
