Added function to add a new staff

--- a/MVCCIMotorsForms/Views/Customer/EditCustomer.cshtml
+++ b/MVCCIMotorsForms/Views/Customer/EditCustomer.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Customer Information";
 }
 
-<h2>Edit Customer</h2>
+<h2>Customer Information</h2>
 <table>
     @using (Html.BeginForm())
     {
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td>
-                <input type="submit" value="Update Customer" />
+                <input type="submit" value="Save Customer" />
             </td>
         </tr>
 
