--- a/MVCCIMotorsForms/Views/Staff/Index.cshtml
+++ b/MVCCIMotorsForms/Views/Staff/Index.cshtml
@@ -4,6 +4,8 @@
 }
 
 <h2>Staff Management</h2>
+<h3><a href="/Staff/EditStaffMember?staffId=0">Add Staff</a></h3>
+
 <table class="table table-bordered table-striped">
 
     <tr>
