Added  the Product Class ready for 3

--- a/MVCCIMotorsForms/Views/Customer/Index.cshtml
+++ b/MVCCIMotorsForms/Views/Customer/Index.cshtml
@@ -4,7 +4,13 @@
 }
 
 <h2>Customer Management</h2>
-<h3><a href="/Customer/EditCustomer?customerId=0">Add Customer</a></h3>
+<table>
+    <tr>
+        <td><h3><a href="/Customer/EditCustomer?customerId=0">Add Customer</a></h3></td>
+      <td></td>
+
+    </tr>
+</table>
 
 <table class="table table-bordered table-striped">
 
