--- a/MVCCIMotorsForms/Views/Customer/Index.cshtml
+++ b/MVCCIMotorsForms/Views/Customer/Index.cshtml
@@ -4,13 +4,10 @@
 }
 
 <h2>Customer Management</h2>
-<table>
-    <tr>
-        <td><h3><a href="/Customer/EditCustomer?customerId=0">Add Customer</a></h3></td>
-      <td></td>
 
-    </tr>
-</table>
+ <h3><a href="/Customer/EditCustomer?customerId=0">Add Customer</a></h3>
+
+      
 
 <table class="table table-bordered table-striped">
 
