--- a/MVCCIMotorsForms/Views/Shared/_Layout.cshtml
+++ b/MVCCIMotorsForms/Views/Shared/_Layout.cshtml
@@ -23,8 +23,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Staff Management", "Index", "Staff")</li>
-                    <li>@Html.ActionLink("Customer Management", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
+                    <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Store", "Index", "Store")</li>
                 </ul>
             </div>
         </div>
